syntax = "proto3";

package d2.common.v1;

option csharp_namespace = "D2.Services.Protos.Common.V1";

// Simple ping service for testing proto generation
service PingService {
  rpc Ping(PingRequest) returns (PingResponse);
}

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
  int64 timestamp = 2;
}
